--- a/README.rdoc
+++ b/README.rdoc
@@ -8,14 +8,14 @@ usernames, lists, hashtags and URLs.
 
   # Extraction
   class MyClass
-    include Twitter::Extractor
+    include TwitterText::Extractor
     usernames = extract_mentioned_screen_names("Mentioning @twitter and @jack")
     # usernames = ["twitter", "jack"]
   end
 
   # Extraction with a block argument
   class MyClass
-    include Twitter::Extractor
+    include TwitterText::Extractor
     extract_reply_screen_name("@twitter are you hiring?").do |username|
       # username = "twitter"
     end
@@ -25,14 +25,14 @@ usernames, lists, hashtags and URLs.
 
   # Auto-link
   class MyClass
-    include Twitter::Autolink
+    include TwitterText::Autolink
 
     html = auto_link("link @user, please #request")
   end
 
   # For Ruby on Rails you want to add this to app/helpers/application_helper.rb
   module ApplicationHelper
-    include Twitter::Autolink
+    include TwitterText::Autolink
   end
 
   # Now the auto_link function is available in every view. So in index.html.erb:
